--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,170 @@
-.App {
-  text-align: center;
+@import url("https://fonts.googleapis.com/css?family=Open+Sans:300,400");
+html {
+  font-size: 62.5%;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.container {
+  height: 100vh;
+  width: 100vw;
+  background-image: url(https://images.unsplash.com/photo-1506190566487-2ea15fae2846?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=68e47766316ed9d9a7992cb57d107eac&auto=format&fit=crop&w=1868&q=80);
+  background-size: cover;
+  background-position: center;
+  display: -webkit-box;
   display: flex;
-  flex-direction: column;
-  align-items: center;
+  -webkit-box-pack: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  -webkit-box-align: center;
+  align-items: center;
 }
 
-.App-link {
-  color: #61dafb;
+.card {
+  display: -webkit-box;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  flex-direction: column;
+  font-size: 2rem;
+  font-family: "Open Sans", sans-serif;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+.today {
+  display: -webkit-box;
+  display: flex;
+}
+
+.temp {
+  background-color: rgba(0, 0, 0, 0.7);
+  color: #fff;
+  font-size: 5rem;
+  letter-spacing: 2px;
+  padding: 2rem;
+  display: -webkit-box;
+  display: flex;
+  -webkit-box-pack: center;
+  justify-content: center;
+  -webkit-box-align: center;
+  align-items: center;
+  -webkit-box-flex: 1;
+  flex-grow: 1;
+}
+
+.conditions {
+  display: -webkit-box;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  flex-direction: column;
+  -webkit-box-flex: 1;
+  flex: 1;
+}
+
+.location {
+  background-color: rgba(218, 241, 254, 0.7);
+  font-weight: 300;
+  font-size: 3.5rem;
+  text-transform: uppercase;
+  padding: 2rem 0;
+  -webkit-box-flex: 0;
+  flex: 0 0 55%;
+  display: -webkit-box;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  flex-direction: column;
+  -webkit-box-pack: center;
+  justify-content: center;
+  -webkit-box-align: center;
+  align-items: center;
+}
+.location h3 {
+  padding-top: 2rem;
+}
+.location .firstLetter {
+  font-size: 4.5rem;
+}
+
+.currentCond {
+  background-color: rgba(211, 52, 89, 0.7);
+  color: #fff;
+  font-weight: 300;
+  display: -webkit-box;
+  display: flex;
+  -webkit-box-pack: justify;
+  justify-content: space-between;
+  -webkit-box-align: center;
+  align-items: center;
+  padding: 1rem 1.5rem;
+  flex-wrap: nowrap;
+}
+.currentCond .tags {
+  font-size: 1rem;
+}
+
+.forcast {
+  display: -webkit-box;
+  display: flex;
+  justify-content: space-around;
+  background-color: #fff;
+  padding: 2rem 0;
+}
+
+.day {
+  display: -webkit-box;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  flex-direction: column;
+  justify-content: space-around;
+  -webkit-box-align: center;
+  align-items: center;
+  border-right: 1px solid #a0a0a0;
+}
+
+.day:last-child {
+  border-right: none;
+}
+
+.dayOfWeek {
+  padding: 1rem 1.75rem;
+  text-transform: uppercase;
+  font-size: 1.75rem;
+  letter-spacing: 1px;
+  font-weight: 300;
+}
+
+.forcastTemp {
+  padding: 0.5rem 1rem;
+}
+
+.icon-location {
+  height: 8rem;
+  width: 8rem;
+}
+
+.icon-forcast {
+  height: 3rem;
+  width: 3rem;
+}
+
+@media only screen and (max-width: 500px) {
+  .today {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    flex-direction: column;
   }
-  to {
-    transform: rotate(360deg);
+
+  .currentCond {
+    -webkit-box-pack: center;
+    justify-content: center;
+  }
+  .currentCond p {
+    padding: 0 2rem;
+  }
+
+  .forcast {
+    flex-wrap: wrap;
+  }
+  .forcast .day {
+    border: none;
   }
 }
